♻️  refactor: fix layer issue and set variables for z-index (#24)

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -7,7 +7,7 @@
   padding: 0.2rem;
   position: fixed;
   top: 0;
-  z-index: 1000;
+  z-index: var(--z-header);
   background-color: transparent;
   padding: 0 2rem;
 }
